--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.0",
+    "nbconvert>=7.16.6",
     "numpy>=2.2.3",
     "pandas>=2.2.3",
 ]
